fix for track record view table which used to be large and couldn't be fix in small screen and scrollers are visible, And style changed for different tables appearing in the pop up dialog using colors it easy on the eye, and more informative

--- a/GUI2/themes/default/css/appstyle.css
+++ b/GUI2/themes/default/css/appstyle.css
@@ -1533,7 +1533,7 @@ div.ui-dialog .ui-dialog-buttonpane{
     font-weight: normal;
 }
 
-.tables tr td
+.tables tr td, .bundlelist-table td
 {
     border-left: 1px solid #757575;
     border-right: 1px solid #757575;
@@ -2222,7 +2222,7 @@ div.ui-dialog .ui-dialog-buttonpane{
 {
     padding: 0;
     margin: 8px;  
-    border:1px solid #666 ;
+    /*border:1px solid #666 ;*/
     border-collapse: collapse;
     color: #000;
     background: #FFF;
@@ -2245,7 +2245,6 @@ div.ui-dialog .ui-dialog-buttonpane{
 .bundlelist-table th, .bundlelist-table td
 {
     border:0px;
-    border-right: 1px solid #666;
     border-bottom: 1px dashed #cccccc;  
     text-align: left;  
 }
